src/src/components/Landing/Landing.css
.landing {
  text-align: center;
  background-image: url("../../assets/Programmer1440x6401.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  height: 975px;
}

.intro-text {
  width: 30%;
  position: absolute;
  left: 36%;
  top: 30%;
  font-size: 2rem;
  line-height: 12 * 1.618;
  color: white;
  text-shadow: 2px 2px 4px #000;
  font-family: 'Cantarell';
  font-weight: 600;
}

.next-text {
  position: absolute;
  width: 20%;
  bottom: 20px;
  left: 41%;
  font-size: 1.6rem;
  color: white;
  font-family: 'Cantarell';
  text-shadow: 2px 2px 4px #000;
}

@media screen and (max-width: 600px) {
  .landing {
    height: 645px;
  }
  .intro-text {
    top: 30%;
    width: 60%;
    left: 5%;
  }
  .next-text {
    width: 30%;
    left: 30%;
  }
}

